# bpmn-documentation-extractor

./: .gitignore  README.md  main.py  pyproject.toml
src/bpmn_doc/: __init__.py  cli.py  constants.py  exceptions.py
src/bpmn_doc/models/: __init__.py  document.py  elements.py  extensions.py
src/bpmn_doc/parser/: __init__.py  bpmn_parser.py  common_parser.py  definitions_parser.py  event_parser.py  extension_parser.py  flow_element_parser.py  gateway_parser.py  subprocess_parser.py  task_parser.py
src/bpmn_doc/renderer/: __init__.py  markdown_renderer.py  yaml_renderer.py
src/bpmn_doc/renderer/templates/: collaboration.md.j2  document.md.j2  events.md.j2  extensions.md.j2  gateways.md.j2  globals.md.j2  process.md.j2  sequence_flows.md.j2  subprocesses.md.j2  tasks.md.j2
